syntax = "proto3";

package chainmetric.identity.service;
option go_package = "github.com/timoth-y/chainmetric-contracts/src/identity/api/rpc";

import "identity/api/presenter/enrollment.proto";
import "identity/api/presenter/user.proto";

service IdentityService {
  rpc register(presenter.RegistrationRequest) returns (presenter.RegistrationResponse);
  rpc enroll(presenter.EnrollmentRequest) returns (presenter.EnrollmentResponse);
  // rpc getCandidates()
}
